matrices: fix spacing in strips with spacing

--- a/src/browser/scss/widgets/_matrices.scss
+++ b/src/browser/scss/widgets/_matrices.scss
@@ -23,6 +23,7 @@
     padding:1rem 2rem 2rem 1rem;
     touch-action: none;
     --color-border:var(--color-bg);
+    --spacing:0;
 
     > .widget {
         min-height: 0;
